--- a/package.json
+++ b/package.json
@@ -66,24 +66,24 @@
 	},
 	"dependencies": {
 		"@keeveestore/keeveestore": "^0.1.0",
-		"ioredis": "^4.9.3"
+		"ioredis": "^4.10.0"
 	},
 	"devDependencies": {
 		"@keeveestore/test-suite": "^0.1.3",
-		"@sindresorhus/tsconfig": "^0.3.0",
-		"@types/ioredis": "^4.0.10",
-		"@types/jest": "^24.0.12",
-		"@types/node": "^12.0.0",
-		"@types/prettier": "^1.16.3",
+		"@types/ioredis": "^4.0.12",
+		"@types/jest": "^24.0.13",
+		"@types/node": "^12.0.7",
+		"@types/prettier": "^1.16.4",
 		"@types/rimraf": "^2.0.2",
-		"codecov": "^3.4.0",
+		"@typeskrift/tsconfig": "^0.1.0",
+		"codecov": "^3.5.0",
 		"jest": "^24.8.0",
 		"jest-extended": "^0.11.1",
-		"prettier": "^1.17.0",
+		"prettier": "^1.18.2",
 		"rimraf": "^2.6.3",
 		"ts-jest": "^24.0.2",
-		"tslint": "^5.16.0",
+		"tslint": "^5.17.0",
 		"tslint-config-prettier": "^1.18.0",
-		"typescript": "^3.4.5"
+		"typescript": "^3.5.1"
 	}
 }
